tests/snapshots/file@call@object.lox.snap
---
source: tests/common/mod.rs
description: "class Foo {}\n\nvar foo = Foo();\nfoo(); // expect runtime error: Can only call functions and classes.\n"
input_file: crafting_interpreters_test_files/call/object.lox
---
OUT: 

===
ERR: 
  × can only call functions and classes
   ╭─[4:4]
 3 │ var foo = Foo();
 4 │ foo(); // expect runtime error: Can only call functions and classes.
   ·    ┬
   ·    ╰── here
   ╰────
